# hat-json

./: .buildinfo  .gitignore  CNAME  README.rst  convert.html  dodo.py  index.html  json.html  objects.inv  pyproject.toml  requirements.pip.dev.txt  requirements.pip.runtime.txt  requirements.pip.txt  search.html  searchindex.js
.doctrees/: convert.doctree  environment.pickle  index.doctree  json.doctree
.github/workflows/: docs.yaml  main.yaml
_sources/: convert.rst.txt  json.rst.txt
docs/: conf.py  index.rst  json.rst
playground/: env.sh  pdoc.sh
py_api/: index.html  search.js
py_api/hat/: json.html
py_api/hat/json/: patch.html  vt.html
schemas_json/: logging.yaml  path.yaml
src_doit/: __init__.py
src_py/hat/json/: __init__.py  convert.py  data.py  encoder.py  patch.py  path.py  repository.py  schema.py  vt.py
src_py/hat/json/validator/: __init__.py  common.py  fastjsonschema.py  jsonschema.py
test_pytest/: test_data.py  test_encoder.py  test_json.py  test_patch.py  test_path.py  test_repository.py  test_schema.py  test_vt.py
