[project]
name = "hat-json"
version = "0.6.0"
description = "Hat JSON library"
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "hat-util ~=0.6.17",
    "jsonpatch ~=1.33",
    "jsonschema ~=4.23.0",
    "pyyaml ~=6.0.2",
    "referencing ~=0.35.1",
    "tomli ~=2.0.1; python_version<'3.11'",
    "tomli_w ~=1.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License"
]

[project.scripts]
hat-json-convert = "hat.json.convert:main"

[project.urls]
Homepage = "http://hat-open.com"
Repository = "https://github.com/hat-open/hat-json.git"
Documentation = "http://hat-json.hat-open.com"

[project.optional-dependencies]
rs = [
    "jsonschema_rs ~=0.28.1",
]
dev = [
    "hat-doit ~=0.16.0",
    "sphinxcontrib-programoutput >=0.17",
]

[build-system]
requires = ["hat-doit ~=0.16.0"]
build-backend = "hat.doit.pep517"

[tool.pytest.ini_options]
testpaths = ["test_pytest"]
asyncio_mode = "auto"
timeout = 300

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
include = ["src_py/*"]
data_file = "build/.coverage"
